--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,23 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build/win64/${CMAKE_BUI
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build/win64/${CMAKE_BUILD_TYPE})
 
 # Include sub-projects.
-file(GLOB_RECURSE PROJECT_SOURCE_FILES "./src/*.h" "./src/*.hpp" "./src/*.cpp")
+file(GLOB_RECURSE PROJECT_SOURCE_FILES "./src/*.h" "./src/*.hpp" "./src/*.cpp" "./src/*.c")
 
 include_directories(
 	"${PROJECT_SOURCE_DIR}/src",
 	"${PROJECT_SOURCE_DIR}/vendors/zlib/include"
 )
 
+message("Output directory:")
+message(${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+message(${CMAKE_SOURCE_DIR}/scripts/)
+
 add_executable(demo ${PROJECT_SOURCE_FILES})
-target_link_libraries(demo ${PROJECT_SOURCE_DIR}/vendors/zlib/lib/zlib.lib )
+target_link_libraries(demo ${PROJECT_SOURCE_DIR}/vendors/zlib/lib/zlib.lib)
+add_custom_command(TARGET demo PRE_BUILD
+	COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_SOURCE_DIR}/scripts/ ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
+
+add_custom_command(TARGET demo PRE_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+	${CMAKE_SOURCE_DIR}/resources/ ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/output_files/)
